onClick remove outline and fix overlap on all routes

--- a/public/assets/stylesheets/portfolios.css
+++ b/public/assets/stylesheets/portfolios.css
@@ -1,5 +1,6 @@
 .portfolio-container {
   background: hsla(0, 0%, 70%, .3);
+  min-inline-size: fit-content;
   margin: 0 10%;
   display: flex;
   flex-direction: row;
@@ -7,7 +8,7 @@
   border-radius: 5px;
   text-align: center;
   color: #E0EAEE;
-  padding: 50px 5px;
+  padding: 50px 15px;
 }
 
 .portfolio-right {
@@ -25,12 +26,10 @@
 .portfolio-selector i {
   font-size: 20px;
   color: #E0EAEE;
-  /* background-color: #555; */
-  /* border-radius: 5px; */
   position: relative;
   top: -10px;
   padding: 10px;
-  /* padding: 5px 6px; */
+  cursor: pointer;
 }
 
 .portfolio-selector p {
@@ -52,7 +51,7 @@
   text-decoration: none;
   color: #b8ecff;
   display: inline-block;
-  padding-top: 65px;
+  margin-top: 65px;
 }
 
 .portfolio-table {
@@ -68,6 +67,7 @@
 }
 
 .transactions-container {
+  min-inline-size: fit-content;
   margin: 0 10%;
   padding: 50px 0;
   background: hsla(0, 0%, 70%, .3);
@@ -94,6 +94,7 @@
   font-size: 17px;
   font-weight: bold;
   color: #E0EAEE;
+  outline: none;
 }
 
 .chart-size {
